--- a/app.yaml
+++ b/app.yaml
@@ -24,9 +24,9 @@ manual_scaling:
 
 endpoints_api_service:
   name: ordinal-virtue-340417.appspot.com
-  config_id: 2022-02-06r0
+  config_id: 2022-02-06r3
 
 env_variables:
     # The app will look for the model file at: gs://MODEL_BUCKET/MODEL_FILENAME
     MODEL_BUCKET: catastrophe
-    MODEL_FILENAME: model.h5
+    MODEL_FILENAME: lr.pkl
